p3/confs/playground.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playground
  template:
    metadata:
      labels:
        app: playground
    spec:
      containers:
        - image: wil42/playground:v1
          name: playground
          ports:
            - containerPort: 8888
