p3/confs/playground-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground
spec:
  ports:
  - port: 8888
    targetPort: 8888
  selector:
    app: playground
